# 42-cursus

./: .gitignore  .gitmodules  README.md
ft_transcendence/backend/: package-lock.json  package.json
ft_transcendence/frontend/: package-lock.json  package.json
java-modules/Module-01/ex04/: Makefile
mobile-modules/mobileModule00/ex00/: pubspec.yaml
mobile-modules/mobileModule00/ex01/: pubspec.yaml
mobile-modules/mobileModule02/medium_weather_app/: pubspec.yaml
mobile-modules/mobileModule03/advanced_weather_app/: pubspec.yaml
mobile-modules/mobileModule04/diary_app/: pubspec.yaml
mobile/mobileModule00/ex02/: pubspec.yaml
mobile/mobileModule00/ex03/: pubspec.yaml
mobile/mobileModule03/advanced_weather_app/: pubspec.yaml
python-modules/module00/ex00/: Hello.py
python-modules/module00/ex01/: format_ft_time.py
python-modules/module00/ex02/: find_ft_type.py
python-modules/module00/ex03/: NULL_not_found.py
python-modules/module00/ex04/: whatis.py
python-modules/module00/ex05/: building.py
python-modules/module00/ex06/: filterstring.py  ft_filter.py
python-modules/module00/ex07/: sos.py
python-modules/module00/ex08/: Loading.py
python-modules/module00/ex09/: README.md  pyproject.toml
python-modules/module00/ex09/ft_package/: utils.py
python-modules/module01/ex00/: give_bmi.py
python-modules/module01/ex01/: array2D.py
python-modules/module01/ex02/: load_image.py
python-modules/module01/ex03/: load_image.py  zoom.py
python-modules/module01/ex04/: load_image.py  rotate.py
python-modules/module01/ex05/: load_image.py  pimp_image.py  (+1 more)
(+114 files in other folders)
